parser/som_parser.go
// Code generated from ./SOM.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // SOM

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SOMParser struct {
	*antlr.BaseParser
}

var SOMParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func somParserInit() {
	staticData := &SOMParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "'primitive'", "", "'='", "", "'('", "')'", "'|'", "','",
		"'-'", "'~'", "'&'", "'*'", "'/'", "'\\'", "'+'", "'>'", "'<'", "'@'",
		"'%'", "", "':'", "'['", "']'", "'#'", "'^'", "'.'", "':='",
	}
	staticData.SymbolicNames = []string{
		"", "Comment", "Whitespace", "Primitive", "Identifier", "Equal", "Separator",
		"NewTerm", "EndTerm", "Or", "Comma", "Minus", "Not", "And", "Star",
		"Div", "Mod", "Plus", "More", "Less", "At", "Per", "OperatorSequence",
		"Colon", "NewBlock", "EndBlock", "Pound", "Exit", "Period", "Assign",
		"Integer", "Double", "Keyword", "KeywordSequence", "STString",
	}
	staticData.RuleNames = []string{
		"classdef", "superclass", "instanceFields", "classFields", "method",
		"pattern", "unaryPattern", "binaryPattern", "keywordPattern", "methodBlock",
		"unarySelector", "binarySelector", "identifier", "keyword", "argument",
		"blockContents", "localDefs", "blockBody", "result", "expression", "assignation",
		"assignments", "assignment", "evaluation", "primary", "variable", "messages",
		"unaryMessage", "binaryMessage", "binaryOperand", "keywordMessage",
		"formula", "nestedTerm", "literal", "literalArray", "literalNumber",
		"literalDecimal", "negativeDecimal", "literalInteger", "literalDouble",
		"literalSymbol", "literalString", "selector", "keywordSelector", "somstring",
		"nestedBlock", "blockPattern", "blockArguments",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SOMParserInit initializes any static state used to implement SOMParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSOMParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SOMParserInit() {
	staticData := &SOMParserStaticData
	staticData.once.Do(somParserInit)
}

// NewSOMParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSOMParser(input antlr.TokenStream) *SOMParser {
	SOMParserInit()
	this := new(SOMParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SOMParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SOM.g4"

	return this
}

// SOMParser tokens.
const (
	SOMParserEOF              = antlr.TokenEOF
	SOMParserComment          = 1
	SOMParserWhitespace       = 2
	SOMParserPrimitive        = 3
	SOMParserIdentifier       = 4
	SOMParserEqual            = 5
	SOMParserSeparator        = 6
	SOMParserNewTerm          = 7
	SOMParserEndTerm          = 8
	SOMParserOr               = 9
	SOMParserComma            = 10
	SOMParserMinus            = 11
	SOMParserNot              = 12
	SOMParserAnd              = 13
	SOMParserStar             = 14
	SOMParserDiv              = 15
	SOMParserMod              = 16
	SOMParserPlus             = 17
	SOMParserMore             = 18
	SOMParserLess             = 19
	SOMParserAt               = 20
	SOMParserPer              = 21
	SOMParserOperatorSequence = 22
	SOMParserColon            = 23
	SOMParserNewBlock         = 24
	SOMParserEndBlock         = 25
	SOMParserPound            = 26
	SOMParserExit             = 27
	SOMParserPeriod           = 28
	SOMParserAssign           = 29
	SOMParserInteger          = 30
	SOMParserDouble           = 31
	SOMParserKeyword          = 32
	SOMParserKeywordSequence  = 33
	SOMParserSTString         = 34
)

// SOMParser rules.
const (
	SOMParserRULE_classdef        = 0
	SOMParserRULE_superclass      = 1
	SOMParserRULE_instanceFields  = 2
	SOMParserRULE_classFields     = 3
	SOMParserRULE_method          = 4
	SOMParserRULE_pattern         = 5
	SOMParserRULE_unaryPattern    = 6
	SOMParserRULE_binaryPattern   = 7
	SOMParserRULE_keywordPattern  = 8
	SOMParserRULE_methodBlock     = 9
	SOMParserRULE_unarySelector   = 10
	SOMParserRULE_binarySelector  = 11
	SOMParserRULE_identifier      = 12
	SOMParserRULE_keyword         = 13
	SOMParserRULE_argument        = 14
	SOMParserRULE_blockContents   = 15
	SOMParserRULE_localDefs       = 16
	SOMParserRULE_blockBody       = 17
	SOMParserRULE_result          = 18
	SOMParserRULE_expression      = 19
	SOMParserRULE_assignation     = 20
	SOMParserRULE_assignments     = 21
	SOMParserRULE_assignment      = 22
	SOMParserRULE_evaluation      = 23
	SOMParserRULE_primary         = 24
	SOMParserRULE_variable        = 25
	SOMParserRULE_messages        = 26
	SOMParserRULE_unaryMessage    = 27
	SOMParserRULE_binaryMessage   = 28
	SOMParserRULE_binaryOperand   = 29
	SOMParserRULE_keywordMessage  = 30
	SOMParserRULE_formula         = 31
	SOMParserRULE_nestedTerm      = 32
	SOMParserRULE_literal         = 33
	SOMParserRULE_literalArray    = 34
	SOMParserRULE_literalNumber   = 35
	SOMParserRULE_literalDecimal  = 36
	SOMParserRULE_negativeDecimal = 37
	SOMParserRULE_literalInteger  = 38
	SOMParserRULE_literalDouble   = 39
	SOMParserRULE_literalSymbol   = 40
	SOMParserRULE_literalString   = 41
	SOMParserRULE_selector        = 42
	SOMParserRULE_keywordSelector = 43
	SOMParserRULE_somstring       = 44
	SOMParserRULE_nestedBlock     = 45
	SOMParserRULE_blockPattern    = 46
	SOMParserRULE_blockArguments  = 47
)

// IClassdefContext is an interface to support dynamic dispatch.
type IClassdefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() antlr.TerminalNode
	Equal() antlr.TerminalNode
	Superclass() ISuperclassContext
	InstanceFields() IInstanceFieldsContext
	EndTerm() antlr.TerminalNode
	AllMethod() []IMethodContext
	Method(i int) IMethodContext
	Separator() antlr.TerminalNode
	ClassFields() IClassFieldsContext

	// IsClassdefContext differentiates from other interfaces.
	IsClassdefContext()
}

type ClassdefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassdefContext() *ClassdefContext {
	var p = new(ClassdefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_classdef
	return p
}

func InitEmptyClassdefContext(p *ClassdefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_classdef
}

func (*ClassdefContext) IsClassdefContext() {}

func NewClassdefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassdefContext {
	var p = new(ClassdefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SOMParserRULE_classdef

	return p
}

func (s *ClassdefContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassdefContext) Identifier() antlr.TerminalNode {
	return s.GetToken(SOMParserIdentifier, 0)
}

func (s *ClassdefContext) Equal() antlr.TerminalNode {
	return s.GetToken(SOMParserEqual, 0)
}

func (s *ClassdefContext) Superclass() ISuperclassContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISuperclassContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISuperclassContext)
}

func (s *ClassdefContext) InstanceFields() IInstanceFieldsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstanceFieldsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstanceFieldsContext)
}

func (s *ClassdefContext) EndTerm() antlr.TerminalNode {
	return s.GetToken(SOMParserEndTerm, 0)
}

func (s *ClassdefContext) AllMethod() []IMethodContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMethodContext); ok {
			len++
		}
	}

	tst := make([]IMethodContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMethodContext); ok {
			tst[i] = t.(IMethodContext)
			i++
		}
	}

	return tst
}

func (s *ClassdefContext) Method(i int) IMethodContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMethodContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMethodContext)
}

func (s *ClassdefContext) Separator() antlr.TerminalNode {
	return s.GetToken(SOMParserSeparator, 0)
}

func (s *ClassdefContext) ClassFields() IClassFieldsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassFieldsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassFieldsContext)
}

func (s *ClassdefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassdefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassdefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.EnterClassdef(s)
	}
}

func (s *ClassdefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.ExitClassdef(s)
	}
}

func (s *ClassdefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SOMVisitor:
		return t.VisitClassdef(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SOMParser) Classdef() (localctx IClassdefContext) {
	localctx = NewClassdefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SOMParserRULE_classdef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(96)
		p.Match(SOMParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(97)
		p.Match(SOMParserEqual)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(98)
		p.Superclass()
	}
	{
		p.SetState(99)
		p.InstanceFields()
	}
	p.SetState(103)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4303355448) != 0 {
		{
			p.SetState(100)
			p.Method()
		}

		p.SetState(105)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(114)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == SOMParserSeparator {
		{
			p.SetState(106)
			p.Match(SOMParserSeparator)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(107)
			p.ClassFields()
		}
		p.SetState(111)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4303355448) != 0 {
			{
				p.SetState(108)
				p.Method()
			}

			p.SetState(113)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(116)
		p.Match(SOMParserEndTerm)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISuperclassContext is an interface to support dynamic dispatch.
type ISuperclassContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NewTerm() antlr.TerminalNode
	Identifier() antlr.TerminalNode

	// IsSuperclassContext differentiates from other interfaces.
	IsSuperclassContext()
}

type SuperclassContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySuperclassContext() *SuperclassContext {
	var p = new(SuperclassContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_superclass
	return p
}

func InitEmptySuperclassContext(p *SuperclassContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_superclass
}

func (*SuperclassContext) IsSuperclassContext() {}

func NewSuperclassContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SuperclassContext {
	var p = new(SuperclassContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SOMParserRULE_superclass

	return p
}

func (s *SuperclassContext) GetParser() antlr.Parser { return s.parser }

func (s *SuperclassContext) NewTerm() antlr.TerminalNode {
	return s.GetToken(SOMParserNewTerm, 0)
}

func (s *SuperclassContext) Identifier() antlr.TerminalNode {
	return s.GetToken(SOMParserIdentifier, 0)
}

func (s *SuperclassContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SuperclassContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SuperclassContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.EnterSuperclass(s)
	}
}

func (s *SuperclassContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.ExitSuperclass(s)
	}
}

func (s *SuperclassContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SOMVisitor:
		return t.VisitSuperclass(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SOMParser) Superclass() (localctx ISuperclassContext) {
	localctx = NewSuperclassContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SOMParserRULE_superclass)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(119)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == SOMParserIdentifier {
		{
			p.SetState(118)
			p.Match(SOMParserIdentifier)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(121)
		p.Match(SOMParserNewTerm)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInstanceFieldsContext is an interface to support dynamic dispatch.
type IInstanceFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOr() []antlr.TerminalNode
	Or(i int) antlr.TerminalNode
	AllVariable() []IVariableContext
	Variable(i int) IVariableContext

	// IsInstanceFieldsContext differentiates from other interfaces.
	IsInstanceFieldsContext()
}

type InstanceFieldsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstanceFieldsContext() *InstanceFieldsContext {
	var p = new(InstanceFieldsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_instanceFields
	return p
}

func InitEmptyInstanceFieldsContext(p *InstanceFieldsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_instanceFields
}

func (*InstanceFieldsContext) IsInstanceFieldsContext() {}

func NewInstanceFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstanceFieldsContext {
	var p = new(InstanceFieldsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SOMParserRULE_instanceFields

	return p
}

func (s *InstanceFieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *InstanceFieldsContext) AllOr() []antlr.TerminalNode {
	return s.GetTokens(SOMParserOr)
}

func (s *InstanceFieldsContext) Or(i int) antlr.TerminalNode {
	return s.GetToken(SOMParserOr, i)
}

func (s *InstanceFieldsContext) AllVariable() []IVariableContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableContext); ok {
			len++
		}
	}

	tst := make([]IVariableContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableContext); ok {
			tst[i] = t.(IVariableContext)
			i++
		}
	}

	return tst
}

func (s *InstanceFieldsContext) Variable(i int) IVariableContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *InstanceFieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstanceFieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstanceFieldsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.EnterInstanceFields(s)
	}
}

func (s *InstanceFieldsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.ExitInstanceFields(s)
	}
}

func (s *InstanceFieldsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SOMVisitor:
		return t.VisitInstanceFields(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SOMParser) InstanceFields() (localctx IInstanceFieldsContext) {
	localctx = NewInstanceFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SOMParserRULE_instanceFields)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(131)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 5, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(123)
			p.Match(SOMParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(127)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == SOMParserPrimitive || _la == SOMParserIdentifier {
			{
				p.SetState(124)
				p.Variable()
			}

			p.SetState(129)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(130)
			p.Match(SOMParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClassFieldsContext is an interface to support dynamic dispatch.
type IClassFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOr() []antlr.TerminalNode
	Or(i int) antlr.TerminalNode
	AllVariable() []IVariableContext
	Variable(i int) IVariableContext

	// IsClassFieldsContext differentiates from other interfaces.
	IsClassFieldsContext()
}

type ClassFieldsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassFieldsContext() *ClassFieldsContext {
	var p = new(ClassFieldsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_classFields
	return p
}

func InitEmptyClassFieldsContext(p *ClassFieldsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_classFields
}

func (*ClassFieldsContext) IsClassFieldsContext() {}

func NewClassFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassFieldsContext {
	var p = new(ClassFieldsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SOMParserRULE_classFields

	return p
}

func (s *ClassFieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassFieldsContext) AllOr() []antlr.TerminalNode {
	return s.GetTokens(SOMParserOr)
}

func (s *ClassFieldsContext) Or(i int) antlr.TerminalNode {
	return s.GetToken(SOMParserOr, i)
}

func (s *ClassFieldsContext) AllVariable() []IVariableContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableContext); ok {
			len++
		}
	}

	tst := make([]IVariableContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableContext); ok {
			tst[i] = t.(IVariableContext)
			i++
		}
	}

	return tst
}

func (s *ClassFieldsContext) Variable(i int) IVariableContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *ClassFieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassFieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClassFieldsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.EnterClassFields(s)
	}
}

func (s *ClassFieldsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SOMListener); ok {
		listenerT.ExitClassFields(s)
	}
}

func (s *ClassFieldsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SOMVisitor:
		return t.VisitClassFields(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SOMParser) ClassFields() (localctx IClassFieldsContext) {
	localctx = NewClassFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SOMParserRULE_classFields)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(141)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(133)
			p.Match(SOMParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(137)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == SOMParserPrimitive || _la == SOMParserIdentifier {
			{
				p.SetState(134)
				p.Variable()
			}

			p.SetState(139)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(140)
			p.Match(SOMParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMethodContext is an interface to support dynamic dispatch.
type IMethodContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Pattern() IPatternContext
	Equal() antlr.TerminalNode
	Primitive() antlr.TerminalNode
	MethodBlock() IMethodBlockContext

	// IsMethodContext differentiates from other interfaces.
	IsMethodContext()
}

type MethodContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMethodContext() *MethodContext {
	var p = new(MethodContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_method
	return p
}

func InitEmptyMethodContext(p *MethodContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SOMParserRULE_method
}

func (*MethodContext) IsMethodContext() {}

func NewMethodContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MethodContext {
	var p = new(MethodContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SOMParserRULE_method

	return p
}

func (s *MethodContext) GetParser() antlr.Parser { return s.parser }

func (s *MethodContext) Pattern() IPatternContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPatternContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}
